# Skeleton-Project

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  build.sh  correspondance-poly.polylines.txt  firstBuild.sh  skel-poly.polylines.txt  start.sh
data/: chair.off  knot108s.off  simple_cone.off  simple_cube.off  simple_cylinder.off  simple_pyramide.off  simple_sphere.off  suzan_triangulated.ply  torus.ply
doc/: Doxyfile
doc/doxygen-awesome-css/: doxygen-awesome-sidebar-only.css  doxygen-awesome.css
override_pmp_files/: SurfaceMeshGL.cpp  SurfaceMeshGL.h  SurfaceMeshIO.cpp  SurfaceSmoothing.h  Window.cpp
src/: CMakeLists.txt  CustomSurfaceMeshGL.cpp  CustomSurfaceMeshGL.h  Skeletizator.cpp  Skeletizator.h  SkeletonMeshViewer.cpp  SkeletonMeshViewer.h  SkeletonTest.cpp  SkeletonTest.h  SkeletonTester.cpp  SkeletonTester.h  SkeletonViewer.cpp  SkeletonViewer.h  cli_tools.cpp  cli_tools.h  imfilebrowser.h  main.cpp  tp4_ex1_tools.cpp
test/: 108_twirl.out  13_octopus.out  1441_Sketched-Brunnen.out  178_raptor.out  189_filigree-low.out  189_filigree.out  SkeletonTester.ipynb  hand_bones-connected.out  knot108s.out  simple_cube.out  simple_cylinder.out  simple_torus.out
tps/: CMakeLists.txt
tps/apps/: foo_tp1.cpp  foo_tp2.cpp  tp0_ex0.cpp  tp1.cpp  tp1_ex0.cpp  tp1_ex1.cpp  tp1_ex2.cpp  tp1_ex3.cpp  tp1_ex4.cpp  tp1_ex5.cpp  tp1_ex6.cpp  tp1_ex7.cpp  tp2_ex1.cpp  tp2_ex3.cpp  tp2_ex4.cpp  tp2_ex6.cpp  tp3_ex1.cpp  tp3_ex2.cpp  tp4_ex1.cpp
tps/corrections/: CMakeLists.txt
tps/corrections/apps/: correction_tp0_ex0.cpp  correction_tp1_ex1.cpp  correction_tp1_ex2.cpp  correction_tp1_ex3.cpp  correction_tp1_ex4.cpp  correction_tp1_ex5.cpp  correction_tp1_ex6.cpp  correction_tp1_ex7.cpp  correction_tp2_ex1.cpp  correction_tp2_ex2.cpp  correction_tp2_ex3.cpp  correction_tp2_ex4.cpp  correction_tp2_ex5.cpp  correction_tp2_ex6.cpp  correction_tp3_ex1.cpp  correction_tp3_ex2.cpp  correction_tp4_ex1.cpp  tp1_ex0.cpp  tp1_ex3.cpp  tp1_ex4.cpp  tp2_ex2.cpp  tp2_ex3.cpp  tp2_ex4.cpp  tp2_ex5.cpp
tps/corrections/include/: correction_tp1_ex1_tools.h  correction_tp1_ex2_tools.h  correction_tp1_ex3_tools.h  correction_tp1_ex4_tools.h  correction_tp1_ex5_tools.h  correction_tp1_ex6_tools.h  correction_tp1_ex7_tools.h  correction_tp2_ex1_tools.h  correction_tp2_ex2_tools.h  correction_tp2_ex3_tools.h  correction_tp2_ex4_tools.h  correction_tp2_ex5_tools.h  correction_tp2_ex6_tools.h  correction_tp3_ex1_tools.h  correction_tp3_ex2_tools.h  correction_tp4_ex1_tools.h  tp1_ex4_tools.h  tp1_ex5_tools.h  tp1_ex7_tools.h  tp2_ex1_tools.h  tp2_ex2_tools.h  tp2_ex3_tools.h  tp2_ex5_tools.h  tp2_ex6_tools.h
tps/corrections/src/: cli_tools.cpp  correction_tp1_ex1_tools.cpp  correction_tp1_ex2_tools.cpp  correction_tp1_ex3_tools.cpp  correction_tp1_ex4_tools.cpp  correction_tp1_ex5_tools.cpp  correction_tp1_ex6_tools.cpp  correction_tp1_ex7_tools.cpp  correction_tp2_ex1_tools.cpp  correction_tp2_ex2_tools.cpp  correction_tp2_ex3_tools.cpp  correction_tp2_ex4_tools.cpp  correction_tp2_ex5_tools.cpp  correction_tp2_ex6_tools.cpp  correction_tp3_ex1_tools.cpp  correction_tp3_ex2_tools.cpp  correction_tp4_ex1_tools.cpp  tp1_ex2_tools.cpp  tp1_ex3_tools.cpp  tp2_ex2_tools.cpp  tp2_ex3_tools.cpp  tp2_ex4_tools.cpp  tp2_ex6_tools.cpp
tps/ennonces/: tp0.md  tp1.md  tp2.md
tps/enonces/: tp0.md  tp1.md  tp2.md  tp3.md  tp4.md
tps/include/: cli_tools.h  foo.h  tp1_ex1_tools.h  tp1_ex2_tools.h  tp1_ex3_tools.h  tp1_ex4_tools.h  tp1_ex5_tools.h  tp1_ex6_tools.h  tp1_ex7_tools.h  tp2_ex2_tools.h  tp2_ex4_tools.h  tp2_ex6_tools.h  tp3_ex1_tools.h  tp3_ex2_tools.h  tp4_ex1_tools.h
tps/src/: cli_tools.cpp  foo.cpp  tp1_ex1_tools.cpp  tp1_ex2_tools.cpp  tp1_ex3_tools.cpp  tp1_ex4_tools.cpp  tp1_ex5_tools.cpp  tp1_ex6_tools.cpp  tp1_ex7_tools.cpp  tp2_ex1_tools.cpp  tp2_ex2_tools.cpp  tp2_ex3_tools.cpp  tp2_ex4_tools.cpp  tp2_ex5_tools.cpp  tp2_ex6_tools.cpp  tp3_ex1_tools.cpp  tp3_ex2_tools.cpp  tp4_ex1_tools.cpp
